# discussion-bench

./: .dockerignore  .env.example  .env.ja.example  .gitignore  COMMANDS.md  INLG_METHODOLOGY.md  INLG_SYSTEM.md  Makefile  README.ja.md  README.md  aiwolf_seed_character_audit.csv  docker-compose.yml  run_local.sh
agent/: .gitignore  README.en.md  README.md
agent/blocks/: README.md
agent/config/: .env.example
agent/doc/: anthropic_cache.md  config_reference.md  freeform.md  system_overview.md
agent/prompts/: README.md
agent/src/: main.py  starter.py
aiwolf-jsai-manyshot_ver0/: ARCHITECTURE.md  preview.md  pyproject.toml
aiwolf-jsai-manyshot_ver0/config/: config.main.en.yml.example  config.main.hiddenbench.jp.yml  config.multi_turn.en.yml.example  config.multi_turn.jp.yml  config.multi_turn.jp.yml.example  config.single_turn.en.yml.example  config.single_turn.jp.yml
aiwolf-jsai-manyshot_ver0/data/: models.md  profiles.jp.yml  sample_packet.yml
aiwolf-jsai-manyshot_ver0/doc/: cost.md  narration_split.md  presentation_3min.md  scenario_cache.md
aiwolf-jsai-manyshot_ver0/src/: main.py
aiwolf-nlp-server/: README.en.md  README.md  go.mod
aiwolf-nlp-server/config/: default_en_13.yml
aiwolf-nlp-server/core/: version.go  waiting_room.go
aiwolf-nlp-server/logic/: communication_session.go  execution.go  guard.go  vote.go
aiwolf-nlp-server/model/: agent.go  broadcast_packet.go  config.go  game_status.go  info.go  packet.go  request.go  setting.go
aiwolf-nlp-server/service/: game_logger.go  realtime_broadcaster.go  tts_broadcaster.go
aiwolf-nlp-server/test/: divine_test.go  game_test.go  match_optimizer_test.go  test_client.go
aiwolf-nlp-server/util/: match_optimizer_util.go  tts_broadcaster_util.go
archive/: README.md
config/: conditions.ja.yml  conditions.yml  conditions_scriptcount.yml  conditions_scriptcount_analysis.yml  conditions_situ_v1match.yml  conditions_v2.yml  conditions_v2_typed.yml  conditions_v2_typed10.yml  hb_task_split.yml  hb_task_split_en.yml  inlg.ja.yml  inlg.yml  system.ja.yml  system.yml
docker/: agent.Dockerfile  server-aiwolf.Dockerfile  server-hidden-bench.Dockerfile
docs/: EXEMPLARS.ja.md  EXEMPLARS.md  HANDOFF_FRECCIA.md  INLG_METHODOLOGY.md  INLG_SYSTEM.md  INLG_VERIFICATION.md  METHODOLOGY.ja.md  METHODOLOGY.md  METRICS.ja.md  METRICS.md  PROMPTS.ja.md  PROMPTS.md  REPEATS_AND_MERGE.md  SYSTEM.ja.md  SYSTEM.md  VERIFICATION.ja.md  VERIFICATION.md
eval/: README.ja.md  README.md  pyproject.toml
eval/config/: judge.8100.yml  judge.8110.yml  judge.8120.yml  judge.discourse.yml  judge.ja.yml  judge.listwise.yml  judge.local.yml  judge.yml
eval/prompts/en/: judge.txt
eval/prompts/jp/: judge.txt
eval/src/: conformity.py  convergence.py  diversity.py  evaluate.py  evaluate_aiwolf.py  evaluate_aiwolf_outcome.py  evaluate_all.py  evaluate_discourse.py  evaluate_discourse_subj.py  evaluate_exemplars.py  evaluate_listwise_subj.py  evaluate_pairwise_subj.py  evaluate_with_judge.py  judge.py  plot_report.py  rankings.py  rankings_stability.py  select_hb_tasks.py  surfacing.py  werewolf_adapter.py
generator/: gen_common_analysis.py  gen_situations.py  pyproject.toml
generator/config/: generator.en.aiwolf.yml  generator.en.yml  generator.full.yml  generator.ja.yml  generator.local.yml  generator.sample.yml  generator.yml
generator/prompts/en/: aiwolf_script.jinja  analysis.jinja  hiddenbench_script.jinja  system_analysis.jinja  system_script.jinja
generator/prompts/jp/: aiwolf_script.jinja  analysis.jinja  hiddenbench_script.jinja  system_analysis.jinja  system_script.jinja
generator/src/: config.py  leakage.py  main.py  prompts.py  provider.py  slicing.py  tokens.py  writer.py
hiddenbench-server/: README.md  pyproject.toml
hiddenbench-server/config/: hiddenbench.yml
hiddenbench-server/src/: answer.py  protocol.py  server.py
hiddenbench-server/tests/: stub_agent.py
inlg-eval/: README.md  pyproject.toml
inlg-eval/src/: conformity.py  (+4 more)
inlg-system/: .env.example  Makefile  README.md  docker-compose.yml  run_local.sh
inlg-web/: README.md  pyproject.toml
inlg-web/src/: app.py
launcher/: launch_agents.py
serving/: _launch_profilerB.sh  aiwolf_subj_when_done.sh  chain_reps.sh  chain_round1.sh  chain_round1b.sh  cleanup_runs.sh  driver_reps.sh  eval20_when_done.sh  gen_analysis.py  gen_condition_analysis.sh  gen_script_analysis.py  gen_typed_analysis.sh  launch_en_main.sh  launch_en_small.sh  launch_scriptcount.sh  post_fix10_subj.sh  post_fix30_subj.sh  profile_hb.sh  render_aiwolf_md.py  run_matrix.sh  run_matrix_parallel.sh  start_vllm.sh  start_vllm_small.sh  status.sh  test_aiwolf_one.sh  translate_aiwolf_when_done.sh  translate_md.py
ui/: Caddyfile  Makefile  README.ja.md  README.md  docker-compose.yml
web/: README.ja.md  README.md  pyproject.toml
(+467 files in other folders)
