[project]
name = "inlg-eval"
version = "0.1.0"
description = "Transcript failure-mode metrics (surfacing, convergence, diversity, conformity) for the INLG study"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",        # judge config
    "openai>=1.0",          # subjective LLM-judge (provider: openai); not needed for provider: mock
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ANN401", "BLE001", "C901", "PLR0912", "PLR0913", "TRY003", "EM101", "EM102"]

[tool.ruff.lint.per-file-ignores]
"src/*" = ["INP001"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
