[project]
name = "hiddenbench-server"
version = "0.1.0"
description = "Faithful HiddenBench (hidden-profile collaborative reasoning) WebSocket game server for the INLG study"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ANN401", "TRY003", "EM101", "EM102", "BLE001", "G004"]

[tool.ruff.lint.per-file-ignores]
"src/*" = ["INP001"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
