[project]
name = "inlg-web"
version = "0.1.0"
description = "Minimal web lobby for human-in-the-loop HiddenBench data collection (INLG study)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ANN401", "BLE001", "TRY003", "EM101", "EM102", "S104"]

[tool.ruff.lint.per-file-ignores]
"src/*" = ["INP001"]
